--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="dist/output.css" />
   </head>
   <body>
-    <div class="bg-black"></div>
+    <div class="bg-gray-100">
+      <div class="px-8 py-12">
+        <img src="img/logo.svg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
